style-fix: cleared floating in 3rd section
Added the clear:both property to the 3rd section in the tablet viewport.
This way if the previous two sections were to be floated left and right
and their height set in a way as to overlap with the 3rd section, now
the 3rd section would be pushed to the next line since both sides are
cleared.

--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,10 @@
     .main-content_section--three {
         margin: 1%;
         width: 98%;
+        clear: both; /* Clearing both sides so if the two sections above
+                        are changed, and their float is set to right and left,
+                        the last section will be put on a new line and the
+                        other 2 sections will not encroach in its space. */
         float: left;
     }
 
@@ -164,5 +168,7 @@
     .main-content_section--three {
         margin: 1%;
         width: 31.3%;
+        float: left;
+        clear: none;
     }
 }
